refactoring
added ctl commands
