# api/src/main/java/dev/thiagooliveira/deepstrike/infrastructure/persistence/game/GameSummaryRepositoryAdapter.java
@@ -1,7 +1,9 @@
 package dev.thiagooliveira.deepstrike.infrastructure.persistence.game;
 
 import dev.thiagooliveira.deepstrike.application.port.outbound.GameSummaryRepository;
+import dev.thiagooliveira.deepstrike.domain.GameStatus;
 import dev.thiagooliveira.deepstrike.domain.GameSummary;
+import dev.thiagooliveira.deepstrike.domain.PlayerId;
 import java.time.ZoneOffset;
 import java.util.List;
 import org.springframework.stereotype.Component;
@@ -16,8 +18,8 @@ public class GameSummaryRepositoryAdapter implements GameSummaryRepository {
   }
 
   @Override
-  public List<GameSummary> findAll() {
-    return repository.findAll().stream()
+  public List<GameSummary> findAll(PlayerId playerId) {
+    return repository.findGamesByPlayerOrOpen(playerId.value(), GameStatus.OPEN).stream()
         .map(
             g ->
                 new GameSummary(
